# CPP_License_Manager

./: CMakeLists.txt  README.md
CPP_License_Manager/: CMakeLists.txt  CPP_License_Manager.cpp  CPP_License_Manager.h  License_Generator.cpp  License_Inspector.cpp  License_Manager.h  main.cpp
CPP_License_Manager/License/: license.lic  textpathfile.txt
CPP_License_Manager/Source/: License_Manager.h  License_Manager_Info.h  License_Manager_Utilities.h
CPP_License_Manager/Source/Generator/: License_Generator.cpp  License_Generator.h
CPP_License_Manager/Source/Inspector/: License_Inspector.h
CPP_License_Manager/Source/Validator/: License_Validator.cpp  License_Validator.h
